--- a/README
+++ b/README
@@ -1,35 +1,44 @@
-Project: Domain Status Checker
+# **Project: Domain Status Checker**
+
 This project is designed to check the status of website domains, using asynchronous techniques to perform the verification efficiently and quickly. The system is capable of determining whether a domain is "ON" (online) or "OFF" (offline), and it also collects information such as HTTP status, page content, and other connectivity parameters.
 
-Features
-HTTP Status Check: Verifies the HTTP status code returned by the request, such as 200 OK, 404 Not Found, 503 Service Unavailable, and others.
-Page Content: Checks if the website contains content (if the page is loading correctly).
-Geolocation: Retrieves information about the server's country of origin.
-Asynchronous Execution: Utilizes asynchronous functions to perform multiple domain checks concurrently without blocking the process.
-Technologies Used
-Python: Programming language used for development.
-Flask: Web framework to create the RESTful API.
-SQLAlchemy: ORM for interacting with the database.
-Playwright: Browser automation tool used for interacting with websites programmatically.
-Asyncio: Library for asynchronous programming, used to perform multiple requests concurrently without blocking.
-Installation
-1. Clone the Repository
-First, clone the repository:
+## **Features**
 
-bash
-Copy code
-git clone https://github.com/your-username/repository-name.git
+ - HTTP Status Check: Verifies the HTTP status code returned by the request, such as 200 OK, 404 Not Found, 503 Service Unavailable, and others.
+ - Page Content: Checks if the website contains content (if the page is loading correctly).
+ - Geolocation: Retrieves information about the server's country of origin.
+ - Asynchronous Execution: Utilizes asynchronous functions to perform multiple domain checks concurrently without blocking the process.
+
+## **Technologies Used**
+
+ - Python: Programming language used for development.
+ - Flask: Web framework to create the RESTful API.
+ - SQLAlchemy: ORM for interacting with the database.
+ - Playwright: Browser automation tool used for interacting with websites programmatically.
+ - Asyncio: Library for asynchronous programming, used to perform multiple requests concurrently without blocking.
+
+## **Installation**
+
+1. Clone the Repository
+
+ First, clone the repository:
+
+ git clone https://github.com/your-username/repository-name.git
+
 2. Install Dependencies
+
 Install the project dependencies in a virtual environment:
 
-bash
-Copy code
-cd repository-name
-python3 -m venv .my_venv
-source .my_venv/bin/activate  # For Linux/macOS
-# .my_venv\Scripts\activate  # For Windows
+```python
 
-pip install -r requirements.txt
+ cd repository-name 
+ python3 -m venv .my_venv
+ source .my_venv/bin/activate  
+
+ pip install -r requirements.txt
+
+´´´
+
 3. Database Setup
 This project uses SQLAlchemy to interact with the database. Make sure to configure your database before running the application.
 
